# waybar-ai-usage-oauth

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  claude.py  codex.py  common.py  pyproject.toml  release.sh  test_waybar_ai_usage.py  waybar-config-example.jsonc  waybar-style-example.css  waybar_ai_usage.py
aur/: README_AUR.md
aur/waybar-ai-usage/: .SRCINFO  PKGBUILD
aur/waybar-ai-usage-oauth/: .SRCINFO  PKGBUILD  waybar-ai-usage-oauth.install
