[project]
name = "waybar-ai-usage"
version = "0.1.4"
description = "Monitor Claude and ChatGPT API usage in Waybar via browser cookies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["waybar", "claude", "chatgpt", "openai", "usage", "monitor"]
authors = [
    { name = "NihilDigit" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "browser-cookie3>=0.20.1",
    "curl-cffi>=0.13.0",
    "json-five>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/NihilDigit/waybar-ai-usage"
Repository = "https://github.com/NihilDigit/waybar-ai-usage"
Issues = "https://github.com/NihilDigit/waybar-ai-usage/issues"

[project.scripts]
claude-usage = "claude:main"
codex-usage = "codex:main"
waybar-ai-usage = "waybar_ai_usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude.py", "codex.py", "common.py", "waybar_ai_usage.py"]

[dependency-groups]
dev = []
