[project]
name = "waybar-ai-usage"
version = "0.5.0"
description = "Monitor Claude Code usage in Waybar via Claude OAuth credentials"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["waybar", "claude", "usage", "monitor", "oauth"]
authors = [
    { name = "NihilDigit" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "json-five>=1.1.2",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/NihilDigit/waybar-ai-usage"
Repository = "https://github.com/NihilDigit/waybar-ai-usage"
Issues = "https://github.com/NihilDigit/waybar-ai-usage/issues"

[project.scripts]
claude-usage = "claude:main"
waybar-ai-usage = "waybar_ai_usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude.py", "common.py", "waybar_ai_usage.py"]

[dependency-groups]
dev = []
