[project]
name = "waybar-ai-usage"
version = "0.5.0"
description = "Monitor Claude Code and Codex CLI usage in Waybar via OAuth credentials"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["waybar", "claude", "codex", "usage", "monitor", "oauth"]
authors = [
    { name = "NihilDigit" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "json-five>=1.1.2",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/poberherr/waybar-ai-usage-oauth"
Repository = "https://github.com/poberherr/waybar-ai-usage-oauth"
Issues = "https://github.com/poberherr/waybar-ai-usage-oauth/issues"
Upstream = "https://github.com/NihilDigit/waybar-ai-usage"

[project.scripts]
claude-usage = "claude:main"
codex-usage = "codex:main"
waybar-ai-usage = "waybar_ai_usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude.py", "codex.py", "common.py", "waybar_ai_usage.py"]

[dependency-groups]
dev = []
